--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,33 @@
 html {
 	font-family: arial;
 }
+
+.source-btn {
+	border: solid 1px;
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+.source-btn + label {
+    font-size: 1.25em;
+    font-weight: 700;
+    color: white;
+    background-color: black;
+    display: inline-block;
+    margin: 10px;
+}
+
+.source-btn:focus + label,
+.source-btn + label:hover {
+    background-color: red;
+}
+
+.medal-icon {
+	border-radius: 30px;
+	min-height: 30px;
+	border: solid 1px;
+}
