--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,10 @@ html {
 }
 
 .medal-icon {
-	border-radius: 30px;
+	border-radius: 4px;
 	min-height: 30px;
+	font-size: 35px;
+	padding: 10px;
 	border: solid 1px;
+	margin: 25px;
 }
