--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,21 @@
 html {
 	font-family: arial;
-}
-body {
 	height: 100%;
+}
+
+body {
+	height: inherit;
 	width: 100%;
 }
+
+.title {
+	height: 100%;
+}
+
+#content {
+	height: 100%;
+}
+
 .source-btn {
 	border: solid 1px;
 	width: 0.1px;
@@ -45,41 +56,62 @@ body {
 }
 
 /** Start Card Styles */
+
 .card {
 	padding: 0px;
-	max-height: 600px;
-	min-height: 450px;
-	max-width: 450px;
-	min-width: 300px;
-	height: 50%;
+	height: 80%;
+	max-width: 95%;
 	display: flex;
-	flex-flow: row;
-	background-color: #ffffcc;
+	flex-flow: column;
+	border: solid 1px black;
+	border-radius: 3px;
 }
+
 .cardContent {
 	margin: 0px;
 	padding: 0px;
-	height: ;
+	height: 75%;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	font-size: 2em;
 	font-family: sans-serif;
 }
 
 .cardButtons {
-	margin: 0px;
-	height: ;
-	align-self: flex-end;
-	display: inline-flex;
+	height: 25%;
+	width: 100%;
+	align-self: center;
+	justify-content: center;
+	display: flex;
 	flex-flow: row;
 }
 
-.leftButton {
+.left {
 	background-color: #ff5050;
 	color: white;
+	text-align: center;
 }
-.rightButton {
+
+.right {
 	color: white;
 	background-color: #80ff80;
+	text-align: center;
+}
 
+.btn {
+	width: 45%;
+	display: flex;
+	font-size: 30px;
+ 	align-items: center; 
+ 	justify-content: center;
+ 	margin: 10px;
+ 	border-radius: 3px;
+}
+
+.btn:hover {
+	box-shadow: 0 0 0 2px #000;
 }
 
 /*  End Card Styles */
